# kalman-clib

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt
include/: kalman.h  kalman_factory_filter.h  kalman_factory_measurement.h
src/: kalman.c
