cmake_minimum_required(VERSION 3.20)

# ==============================================================================
# Project
# ==============================================================================
project(kalman-clib C)
add_library(kalman-clib INTERFACE)

# ==============================================================================
# C standard
# ==============================================================================
set(CMAKE_C_STANDARD 11)

# ==============================================================================
# Headers
# ==============================================================================
target_include_directories(TelemetrySensors INTERFACE
   include
)

# ==============================================================================
# Sources
# ==============================================================================
target_sources(TelemetrySensors INTERFACE
    src/cholesky.c
    src/kalman.c
    src/matrix.c
)

# ==============================================================================
# Linker
# ==============================================================================

target_link_directories(TelemetrySensors INTERFACE
)

target_link_libraries(TelemetrySensors INTERFACE
)